Fix gap

--- a/src/app/_components/Header/Header.module.css
+++ b/src/app/_components/Header/Header.module.css
@@ -214,6 +214,7 @@
     color: var(--white-color);
     font-weight: 900;
     padding-inline: 6em;
+    gap: 0.8em;
   }
 
   .phone {
